--- a/client/src/pages/styles/DashboardPage.css
+++ b/client/src/pages/styles/DashboardPage.css
@@ -2,9 +2,9 @@
     position: relative;
     background-color: #D9D9D9;
     top: 7%;
-    width: 93%;
-    min-width: 97%;
-    min-height: 140vh;
+    width: 100%;
+    height: 100%;
+    min-height: 120vh;
     margin-left: 80px;
 }
 
@@ -23,7 +23,7 @@
     position: absolute;
     top: 20%;
     padding: 10px;
-    width: 90%;
+    width: 98%;
 }
 
 .dashboard-container h1 {
@@ -43,9 +43,8 @@
 .banner1 {
     position: absolute;
     background-color: black;
-    min-width: 80%;
     margin-top: 60px;
-    margin-left: 250px;
+    margin-left: 20%;
     height: 120px;
     border-radius: 10px;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.5);
@@ -54,7 +53,7 @@
 .banner1 img {
     opacity: .7;
     object-fit: cover;
-    min-width: 100%;
+    width: 100%;
     height: 100%;
     border-radius: 10px;
 }
@@ -99,7 +98,7 @@
     gap: 10px;
     display: flex;
     position: absolute;
-    width: 1400px;
+    width: 100%;
     margin-top: -10px;
     
 }
@@ -132,7 +131,7 @@
 }
 
 .rating {
-    min-width: 30%;
+    width: 30%;
     position: absolute;
     margin-top: -30px;
     top: 67%;
@@ -161,5 +160,32 @@
   right: 170px; 
 }
 
+
+@media (max-width: 1200px) {
+    .dashboard-container h1 {
+        font-size: 30px;
+    }
+    .dashboard-container h4 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .dashboard-container h1 {
+        opacity: 0;
+    }
+    .dashboard-container h4 {
+        opacity: 0;
+    }
+
+    .dashboard-container svg {
+        opacity: 0;
+    }
+
+    .banner1 {
+        width: 100%;
+        margin-left: 12%;
+    }
+}
 
 
