--- a/client/src/pages/styles/FoundItemPage.css
+++ b/client/src/pages/styles/FoundItemPage.css
@@ -147,16 +147,15 @@
 }
 
 .processClaimBtn {
-    position: absolute;
     top: 2%;
-    left: 83%;
+    left: 93%;
     width: 150px;
     height: 30px;
     border-radius: 5px;
     background-color: #475C6F;
     color: white;
     border: none;
-    z-index: 3000;
+   z-index: 1;
 }
 
 .processClaimBtn:hover {
@@ -254,3 +253,8 @@
     white-space: nowrap;
 }
 
+@media (max-width: 1000) {
+    .lost-item-container1 h1 {
+        opacity: 0;
+    }
+}
