--- a/client/src/pages/styles/LostItemPage.css
+++ b/client/src/pages/styles/LostItemPage.css
@@ -2,7 +2,7 @@
     position: relative;
     top: 7%;
     background-color: #D9D9D9;
-    min-width: 100%;
+    width: 100%;
     min-height: 130vh;
     margin-left: 80px;
 }
@@ -14,11 +14,11 @@
     font-weight: bolder;
 }
 
-.lost-item-container {
+.lost-item-container1 {
     position: absolute;
     top: 8%;
     padding: 10px;
-    min-width: 98%;
+    width: 95%;
     margin-top: -30px;
     height: 610px;
 }
@@ -60,10 +60,11 @@
     position: absolute;
     top: 11%;
     background-color: white;
-    min-width: 95%;
-    height: 590px;
+    width: 100%;
+    height: 690px;
     border-radius: 10px;
-    
+    overflow-x: auto;
+
 }
 
 .lost-item-table1 th {
@@ -73,7 +74,7 @@
   font-weight: bold;       
   font-size: 12px;
   height: 30px; 
-  min-width: 100%;      
+  width: 100%;      
 }
 
 .lost-item-table1 thead {
@@ -86,8 +87,9 @@
 
 .lost-item-table1 tbody {
   background-color: transparent;
-  height: 50px;
+  height: 100%;
   width: 100%;
+  
 }
 
 .lost-item-table1 td {
@@ -98,7 +100,7 @@
   justify-items: center;
   justify-content: center;
   text-align: center;
-  min-width: 100%; 
+  width: 100%; 
 }
 
 
@@ -115,7 +117,7 @@
     position: relative;
     border-radius: 40px;
     background-color: aliceblue;
-    width: 40px;
+    width: 100%;
     height: 40px;
 }
 
@@ -159,9 +161,7 @@
     flex-direction: row;
     position: absolute;
     top: 4%;
-    left: 69%;
-    margin-left: auto;
-    width: 500px;
+    left: 70%;
     height: 40px;
     padding: 5px;
     justify-items: center;
@@ -183,19 +183,19 @@
 
 .lost-item-table1 th:nth-child(1),
 .lost-item-table1 td:nth-child(1) {
-    width: 9%;
+    width: 12%;
     white-space: nowrap;
 }
 
 .lost-item-table1 th:nth-child(2),
 .lost-item-table1 td:nth-child(2) {
-    width: 8%;
+    width: 12%;
     white-space: nowrap;
 }
 
 .lost-item-table1 th:nth-child(3),
 .lost-item-table1 td:nth-child(3) {
-    width: 10%;
+    width: 14%;
     white-space: nowrap;
 }
 
@@ -208,7 +208,7 @@
 
 .lost-item-table1 th:nth-child(5),
 .lost-item-table1 td:nth-child(5) {
-    width: 12%;
+    width: 15%;
     white-space: nowrap;
 }
 
@@ -230,8 +230,33 @@
     white-space: nowrap;
 }
 
-@media (min-width: 1701px) {
-    .lost-item-container {
-        margin-top: -60px;
+.lost-item-table1 td:nth-child(1) {
+    width: 12.5%;
+}
+
+.lost-item-table1 td:nth-child(2) {
+    width: 12.2%;
+}
+
+.lost-item-table1 td:nth-child(3) {
+    width: 14%;
+}
+
+.lost-item-table1 td:nth-child(4) {
+    width: 12.5%;
+}
+.lost-item-table1 td:nth-child(7) {
+    width: 12%;
+}
+
+@media (max-width: 768px) {
+    
+
+    .actions-row1 {
+        position: relative;
+        top: 0;
+        left: 50%;
+        justify-content: flex-start;
+        margin-top: 10px;
     }
 }
