--- a/client/src/user_pages/styles/FoundMatchResults.css
+++ b/client/src/user_pages/styles/FoundMatchResults.css
@@ -23,10 +23,20 @@
     color: black;
 }
 
+.matching-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    max-height: 90vh; /* Adjust as needed */
+    overflow-x: auto; /* Enable vertical scrolling */
+}
+
 .matching-card{
     margin-top: 40px; 
     margin-left: 40px;
-    background-color: white;
+    background-color: #D9D9D9;
     height: 550px;
     width: 330px;
     border-radius: 10px;
@@ -127,11 +137,50 @@
     
     position: absolute;
     display: flex;
-    top: 7%;
-    left: 6%;
+    
     width: 100%;
     background-color: white;
     background-size: cover;   
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.floating-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.floating-panel-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  width: 90%;
+  max-height: 80%;
+  overflow-y: auto;
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  color: #475C6F;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.floating-panel-content p {
+    color: black;
 }
